arreglado el acces a ventana staff

--- a/admin/.htaccess
+++ b/admin/.htaccess
@@ -1,4 +1,5 @@
-AuthUserFile /admin/.htpassword
-AuthName "Introduce Credenciales de Administrador"
 AuthType Basic
+AuthName "Introduce Credenciales de Administrador"
+AuthBasicProvider file
+AuthUserFile "/home/a18rubonclop/public_html/Cantina/admin/.htpasswd"
 Require valid-user
